<resources>
    <string name="app_name">Eyepetizer</string>

    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="about">关于</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>


    <string name="cancel">取消</string>

    <string name="nickname">渣渣灰</string>
    <string name="view_homepage">查看个人主页 ></string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">观看记录</string>
    <string name="feedback">意见反馈</string>


    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>


    <string name="copy_right_notice">内容部分数据归原公司《开眼Eyepetizer》版权所有</string>
    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="since">copyright ©2018 SongDongliang</string>
    <string name="gitHub">GitHub</string>
    <string name="dear_user">亲爱的你</string>
    <string name="user_close_permission">您关闭了权限</string>
    <string name="permission_apply">为了能够正常使用，请开启这些权限吧</string>
    <string name="init_finish">初始化完毕</string>
    <string name="funny">#搞笑</string>
    <string name="back_info">再按一次退出程序</string>
    <string name="default_nickname">渣渣灰</string>
    <string name="follow">关注</string>
    <string name="category">分类</string>
    <string name="like">喜欢</string>
    <string name="share">分享</string>
    <string name="reply">评论</string>
    <string name="play_error">播放失败</string>
    <string name="moment">动态</string>
    <string name="attention">关注</string>
    <string name="leave_a_message">留言</string>
    <string name="watch_record">观看记录</string>
    <string name="default_info">这个人很懒，什么也没留下...</string>
    <string name="input_interest_word">请输入你感兴趣的关键字</string>
    <string name="test_text">测试文本</string>
</resources>
