<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/parallax"
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_marginTop="-300dp"
        android:src="@mipmap/img_profile_head"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax" />


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePreviewInEditMode="false">

        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.CollapsingToolbarLayout
                        android:id="@+id/collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentScrim="?android:attr/colorPrimary"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                        app:titleEnabled="false"
                        tools:targetApi="LOLLIPOP">

                        <RelativeLayout
                            android:id="@+id/panel_lyt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="200dp"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/panel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="40dp"
                                android:background="@android:color/white"
                                android:paddingBottom="@dimen/dp10"
                                android:paddingLeft="@dimen/dp16"
                                android:paddingRight="@dimen/dp16"
                                android:paddingTop="@dimen/dp10">

                                <TextView
                                    android:id="@+id/attention"
                                    style="@style/AppTheme.Label"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginTop="0dp"
                                    android:background="@drawable/btn_radius_theme_bg"
                                    android:paddingBottom="@dimen/dp8"
                                    android:paddingLeft="@dimen/dp25"
                                    android:paddingRight="@dimen/dp25"
                                    android:paddingTop="@dimen/dp8"
                                    android:text="@string/attention"
                                    android:textColor="@android:color/white" />

                                <TextView
                                    android:id="@+id/leaveWord"
                                    style="@style/AppTheme.Label"
                                    android:layout_marginLeft="@dimen/dp10"
                                    android:layout_marginRight="@dimen/dp10"
                                    android:layout_marginTop="0dp"
                                    android:layout_toStartOf="@id/attention"
                                    android:background="@drawable/btn_radius_theme_border_bg"
                                    android:paddingBottom="8dp"
                                    android:paddingLeft="25dp"
                                    android:paddingRight="25dp"
                                    android:paddingTop="8dp"
                                    android:text="@string/leave_a_message"
                                    android:textColor="@color/colorPrimaryDark" />

                                <TextView
                                    android:id="@+id/nickname"
                                    style="@style/AppTheme.Label.Title"
                                    android:layout_below="@id/attention"
                                    android:gravity="center_horizontal"
                                    android:text="@string/nickname" />

                                <LinearLayout
                                    android:id="@+id/relationship"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/nickname"
                                    android:layout_marginTop="@dimen/dp10">

                                    <TextView
                                        android:id="@+id/relationship_attention"
                                        style="@style/AppTheme.Label"
                                        android:text="关注 88 " />

                                    <TextView
                                        style="@style/AppTheme.Label"
                                        android:layout_marginLeft="@dimen/dp16"
                                        android:layout_marginRight="@dimen/dp16"
                                        android:text="|" />

                                    <TextView
                                        android:id="@+id/relationship_fans"
                                        style="@style/AppTheme.Label"
                                        android:text="粉丝 10000" />
                                </LinearLayout>

                                <TextView
                                    android:id="@+id/signature"
                                    style="@style/AppTheme.Label.Description"
                                    android:layout_below="@id/relationship"
                                    android:layout_marginTop="@dimen/dp10"
                                    android:text="@dimen/default_info"
                                    android:textColor="@color/color_darker_gray" />

                            </RelativeLayout>

                            <com.sdl.eyepetizer.ui.view.CircleImageView
                                android:id="@+id/iv_avatar"
                                android:layout_width="@dimen/dp80"
                                android:layout_height="@dimen/dp80"
                                android:layout_marginStart="@dimen/dp10"
                                android:src="@mipmap/img_avatar"
                                app:borderColor="@color/color_gray"
                                app:borderWidth="@dimen/dp2"
                                app:type="circle" />

                            <TextView
                                android:id="@+id/visitor"
                                style="@style/AppTheme.Label.Layout"
                                android:layout_alignParentEnd="true"
                                android:background="?android:attr/selectableItemBackground"
                                android:shadowColor="#aa000000"
                                android:shadowDx="2.5"
                                android:shadowDy="2.5"
                                android:shadowRadius="10"
                                android:text="访客总量 888"
                                android:textColor="@android:color/white" />

                            <View
                                style="@style/AppTheme.DiverLine"
                                android:layout_alignParentBottom="true" />
                        </RelativeLayout>

                    </android.support.design.widget.CollapsingToolbarLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:orientation="vertical"
                        android:paddingBottom="0dp"
                        app:layout_scrollFlags="scroll">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:background="@color/color_division_line"
                            android:orientation="vertical"
                            android:paddingBottom="@dimen/line"
                            android:paddingTop="@dimen/line">

                            <LinearLayout
                                android:id="@+id/fmc_center_dynamic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/white"
                                android:gravity="center_vertical"
                                android:orientation="vertical"
                                android:paddingBottom="@dimen/dp3"
                                android:paddingLeft="@dimen/dp10"
                                android:paddingRight="@dimen/dp10"
                                android:paddingTop="@dimen/dp3">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingBottom="@dimen/dp10"
                                    android:paddingEnd="@dimen/dp5"
                                    android:paddingStart="@dimen/dp5"
                                    android:paddingTop="@dimen/dp10"
                                    android:singleLine="true"
                                    android:text="@string/moment"
                                    android:textColor="@color/color_gray"
                                    android:textSize="@dimen/text_small" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <WebView
                    android:id="@+id/mWebView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/color_title_bg"
        app:layout_collapseMode="pin"
        app:navigationIcon="?android:attr/homeAsUpIndicator">

        <android.support.v7.widget.ButtonBarLayout
            android:id="@+id/buttonBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.hazz.kotlinmvp.view.CircleImageView
                android:id="@+id/toolbar_avatar"
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp32"
                android:layout_marginEnd="@dimen/padding_common_d"
                android:src="@mipmap/img_avatar"
                app:borderColor="@color/color_gray"
                app:borderWidth="2dp"
                app:type="circle" />

            <TextView
                android:id="@+id/title"
                style="@style/Text.Normal.Black"
                android:layout_gravity="center"
                android:text="@string/nickname" />
        </android.support.v7.widget.ButtonBarLayout>
    </android.support.v7.widget.Toolbar>


</FrameLayout>